--- a/nginx/sites/01-lounge .conf
+++ b/nginx/sites/01-lounge .conf
@@ -1,10 +1,10 @@
 server {
 
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
+    listen 80;
+    listen [::]:80;
 
-    server_name localhost;
-    root /var/www/public;
+    server_name lounge.*;
+    root /var/www/lounge-ng/public;
     index index.php index.html index.htm;
 
     location / {
