--- a/nginx/sites/04-people.conf
+++ b/nginx/sites/04-people.conf
@@ -3,8 +3,8 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name project-1.dev;
-    root /var/www/project-1/public;
+    server_name people.*;
+    root /var/www/people/public;
     index index.php index.html index.htm;
 
     location / {
