--- a/php-fpm/Dockerfile-70
+++ b/php-fpm/Dockerfile-70
@@ -283,6 +283,14 @@ RUN if [ ${INSTALL_MSSQL} = true ]; then \
 ;fi
 
 #####################################
+# IMAGICK:
+#####################################
+RUN apt-get update -yqq \
+    && apt-get install -y libmagickwand-dev \
+    && pecl install imagick \
+    && docker-php-ext-enable imagick
+
+#####################################
 # Image optimizers:
 #####################################
 USER root
@@ -304,7 +312,7 @@ ADD ./laravel.pool.conf /usr/local/etc/php-fpm.d/
 
 #RUN rm -r /var/lib/apt/lists/*
 
-RUN usermod -u 1000 www-data
+RUN usermod -u 1001 www-data
 
 WORKDIR /var/www
 
